--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,3 @@
-              - name: Git Auto Commit
-                uses: stefanzweifel/git-auto-commit-action@v5.0.0
+name: Git Auto Commit
+uses: stefanzweifel/git-auto-commit-action@v5.0.0
             
