--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,42 @@
-- name: Git Auto Commit
+            - name: Add & Commit
   # You may pin to the exact commit or the version.
-  # uses: stefanzweifel/git-auto-commit-action@8756aa072ef5b4a080af5dc8fef36c5d586e521d
-  uses: stefanzweifel/git-auto-commit-action@v5.0.0
+  # uses: EndBug/add-and-commit@a94899bca583c204427a224a7af87c02f9b325d5
+  uses: EndBug/add-and-commit@v9.1.4
   with:
-    # Commit message
-    commit_message: # optional, default is Apply automatic changes
-    # Git branch name, where changes should be pushed too. Required if Action is used on the `pull_request` event
-    branch: # optional, default is ${{ github.head_ref }}
-    # Commit options (eg. --no-verify)
-    commit_options: # optional, default is 
-    # Add options (eg. -u)
-    add_options: # optional, default is 
-    # Status options (eg. --untracked-files=no)
-    status_options: # optional, default is 
-    # File pattern used for `git add`. For example `src/*.js`
-    file_pattern: # optional, default is .
-    # Local file path to the git repository. Defaults to the current directory (`.`)
-    repository: # optional, default is .
-    # Name used for the commit user
-    commit_user_name: # optional, default is github-actions[bot]
-    # Email address used for the commit user
-    commit_user_email: # optional, default is 41898282+github-actions[bot]@users.noreply.github.com
-    # Value used for the commit author. Defaults to the username of whoever triggered this workflow run.
-    commit_author: # optional, default is ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
-    # Message used to create a new git tag with the commit. Keep this empty, if no tag should be created.
-    tagging_message: # optional, default is 
-    # Push options (eg. --force)
-    push_options: # optional, default is 
-    # Skip the check if the git repository is dirty and always try to create a commit.
-    skip_dirty_check: # optional
-    # Skip the call to git-fetch.
-    skip_fetch: # optional
-    # Skip the call to git-checkout.
-    skip_checkout: # optional
-    # Stop the shell from expanding filenames (https://www.gnu.org/software/bash/manual/html_node/Filename-Expansion.html)
-    disable_globbing: # optional
-    # Create new branch with the name of `branch`-input in local and remote repository, if it doesn't exist yet.
-    create_branch: # optional
-    # Internal use only! Path to git binary used to check if git is available. (Don't change this!)
-    internal_git_binary: # optional, default is git
+    # Arguments for the git add command
+    add: # optional, default is .
+    # The name of the user that will be displayed as the author of the commit
+    author_name: # optional
+    # The email of the user that will be displayed as the author of the commit
+    author_email: # optional
+    # Additional arguments for the git commit command
+    commit: # optional
+    # The name of the custom committer you want to use
+    committer_name: # optional
+    # The email of the custom committer you want to use
+    committer_email: # optional
+    # The directory where your repository is located. You should use actions/checkout first to set it up
+    cwd: # optional, default is .
+    # How the action should fill missing author name or email.
+    default_author: # optional, default is github_actor
+    # Arguments for the git fetch command (if 'false', the action won't fetch the repo)
+    fetch: # optional, default is --tags --force
+    # The message for the commit
+    message: # optional
+    # The name of the branch to create.
+    new_branch: # optional
+    # The way the action should handle pathspec errors from the add and remove commands.
+    pathspec_error_handling: # optional, default is ignore
+    # Arguments for the git pull command. By default, the action does not pull.
+    pull: # optional
+    # Whether to push the commit and, if any, its tags to the repo. It can also be used to set the git push arguments (more info in the README)
+    push: # optional, default is true
+    # Arguments for the git rm command
+    remove: # optional
+    # Arguments for the git tag command (the tag name always needs to be the first word not preceded by a hyphen)
+    tag: # optional
+    # Arguments for the git push --tags command (any additional argument will be added after --tags)
+    tag_push: # optional
+    # The token used to make requests to the GitHub API. It's NOT used to make commits and should not be changed.
+    github_token: # optional, default is ${{ github.token }}
           
