--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-            - name: Add & Commit
+            name: Add & Commit
   # You may pin to the exact commit or the version.
   # uses: EndBug/add-and-commit@a94899bca583c204427a224a7af87c02f9b325d5
   uses: EndBug/add-and-commit@v9.1.4
